syntax = "proto3";

package hihoak.music_api.v1;

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "hihoak/api-service";

service MusicApi {
  rpc SpotifySearchArtist(SpotifySearchArtistRequest) returns (SpotifySearchArtistResponse) {
    option(google.api.http) = {
      post: "v1/spotify/artist/get"
      body: "*"
    };
  }

  rpc SpotifySearchTopArtists(SpotifySearchTopArtistsRequest) returns (SpotifySearchTopArtistsResponse) {
    option(google.api.http) = {
      post: "v1/spotify/artist/top"
      body: "*"
    };
  }
}

message SpotifySearchArtistRequest {
  string name = 1;
  repeated string genre = 2;
}

message SpotifySearchArtistResponse {
  SpotifyArtist artist = 1;
}

message SpotifySearchTopArtistsRequest {
  repeated string genres = 1;
  repeated string exclude_genres = 2;
  int64 min_followers = 3;
  int64 min_popularity = 4;
  int64 count = 5;
}

message SpotifySearchTopArtistsResponse {
  repeated SpotifyArtist artists = 1;
}

message SpotifyArtist {
  string name = 1;
  int64 followers = 2;
  repeated string genres = 3;
  string uri = 4;
}